@@ -23,6 +23,15 @@ IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY O
 */
 #endregion
 
+#region CVS Information
+/*
+ * $Source$
+ * $Author$
+ * $Date$
+ * $Revision$
+ */
+#endregion
+
 using System;
 using System.Collections;
 using System.Collections.Specialized;
@@ -153,7 +162,7 @@ namespace DNPreBuild.Core.Targets
                     ps.WriteLine("\t\t\t\tNoStandardLibraries = \"false\"");
 
                 ps.WriteLine("\t\t\t\tOutputType = \"{0}\"", project.Type.ToString());
-                ps.WriteLine("\t\t\t\tKernelNamespace = \"{0}\"", project.Name);
+                ps.WriteLine("\t\t\t\tRootNamespace = \"{0}\"", project.RootNamespace);
                 ps.WriteLine("\t\t\t\tStartupObject = \"{0}\"", project.StartupObject);
                 ps.WriteLine("\t\t\t>");
 
