@@ -3,6 +3,13 @@
 + = Addition
 ! = Bug Fix
 
+[ April 22, 2004 - 0.11.3 ]
+    ! Fixed a bug where I was writing the wrong property name for a projects root
+      namespace.
+    ! Removed a DEBUG statement I had left in the code in 0.11.2.
+    + Added the rootNamespace property to the <Project> element, allowing you to
+      specify the root namespace.
+
 [ April 22, 2004 - 0.11.2 ]
 	! Fixed a bug with the /file command-line operator. Was using the unresolved
 	  file path rather then the resolved one, was making the attempt to open the
